[gd_scene load_steps=3 format=3 uid="uid://dw7wr5dstchoq"]

[ext_resource type="Texture2D" uid="uid://dqaj1blpi8e0y" path="res://assets/Forest Tileset/BG/NonParallax.png" id="1_cjjey"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_gk856"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gk856")

[node name="TEMP_Background" type="Sprite2D" parent="."]
position = Vector2(195, 111)
scale = Vector2(4.9, 1.29545)
texture = ExtResource("1_cjjey")
metadata/_edit_lock_ = true

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -145.0
offset_right = 69.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button_Start" type="Button" parent="Buttons"]
layout_mode = 2
text = "Start"

[node name="Button_Options" type="Button" parent="Buttons"]
layout_mode = 2
text = "Options"

[node name="Button_Credits" type="Button" parent="Buttons"]
layout_mode = 2
text = "Credits"

[node name="Button_Quit" type="Button" parent="Buttons"]
layout_mode = 2
text = "Quit"

[node name="Title_TEMP" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 43.0
offset_right = 334.0
offset_bottom = 76.0
text = "PROJECT LEAFHOPPER"
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[connection signal="pressed" from="Buttons/Button_Start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="Buttons/Button_Options" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="Buttons/Button_Credits" to="." method="_on_button_credits_pressed"]
[connection signal="pressed" from="Buttons/Button_Quit" to="." method="_on_button_quit_pressed"]
